--- a/resume.html
+++ b/resume.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>Natalie Freund's Reumse</title>
+		<link rel="stylesheet" type="text/css" href="style.css">
 	</head>
 	
 	<body>
