--- a/volleyball.html
+++ b/volleyball.html
@@ -8,7 +8,7 @@
 		
 	<body>
 		<header>
-			<nav>
+			<nav class="nav">
 				<ul>
 					<li><a href="index.html">Home</a></li>
 					<li><a href="resume.html">Resume</a></li>
