--- a/volleyball.html
+++ b/volleyball.html
@@ -24,9 +24,24 @@
 		<p>Highschool: Fremd</p>
 		<p>Position: RS</p>
 		<h2>Bio</h2>
-		<p>2018: Played in 21 matches and 39 sets. Had 55 assists and 40 digs. Had a season-high 11 assists on August 31 at Willamette</p>
-		<p>2017: Played in all 37 matches and in 123 of the 126 sets as a freshman. AD3I First Team selection. Team-highs in assists (526), assists/set (4.74), and aces (47). Had 215 digs. Double-digit assists in 31 of the 37 matches. Had a season-high 33 assists and 16 digs against Earlham on October 28. Eight matches with double-digit digs, all of which were double-doubles. Had her season-high in aces (four) three times (September 2 against Oglethorpe, September 8 against Marian, October 3 at Alverno)</p>
-		<p>Prep Accomplishments: All Conference, Daily Herald First Team All Area, MVP, Team Captain, Club Player of the Month, Sportsmanship Award, National Honors Society, Honor Roll, Science Club, Math Team</p>
+		<div class="dropdown1">
+			<span>2018</span>
+			<div class="dropdown1-content">
+				<p>Played in 21 matches and 39 sets. Had 55 assists and 40 digs. Had a season-high 11 assists on August 31 at Willamette</p>
+			</div>
+		</div>
+		<div class="dropdown2">
+			<span>2017</span>
+			<div class="dropdown2-content">
+				<p>Played in all 37 matches and in 123 of the 126 sets as a freshman. AD3I First Team selection. Team-highs in assists (526), assists/set (4.74), and aces (47). Had 215 digs. Double-digit assists in 31 of the 37 matches. Had a season-high 33 assists and 16 digs against Earlham on October 28. Eight matches with double-digit digs, all of which were double-doubles. Had her season-high in aces (four) three times (September 2 against Oglethorpe, September 8 against Marian, October 3 at Alverno)</p>
+			</div>
+		</div>
+		<div class="dropdown3">
+			<span>Prep Accomplishments</span>
+			<div class="dropdown3-content">
+				<p>Prep Accomplishments: All Conference, Daily Herald First Team All Area, MVP, Team Captain, Club Player of the Month, Sportsmanship Award, National Honors Society, Honor Roll, Science Club, Math Team</p>
+			</div>
+		</div>
 		<h2>Stats 2019-2020</h2>
 		<p>Matches: 8</p>
 		<p>Sets: 31</p>
