--- a/volleyball.html
+++ b/volleyball.html
@@ -23,7 +23,7 @@
 		<p>Hometown: Palatine, IL</p>
 		<p>Highschool: Fremd</p>
 		<p>Position: RS</p>
-		<h2>Bio</h2>
+		<h2>Bio (Hover over title to see information)</h2>
 		<div class="dropdown1">
 			<span>2018</span>
 			<div class="dropdown1-content">
