--- a/index.html
+++ b/index.html
@@ -16,21 +16,29 @@
 				</ul>
 			</nav>
 		</header>
-		<h1>Natalie Freund</h1>
-		<img src="media/propic.jpg" alt="Headshot">
-		<h2>About Me</h2>
-		<p>Age: 20</p>
-		<p>Home City: Palatine, IL 60067</p>
-		<p>Major: Cybersecurity</p>
-		<h2>My Interests</h2>
-		<p>Favorite Movie: Inception</p>
-		<img src="media/inceptionpic.jpg" alt="Inception Photo">
-		<p>Favorite TV Show: Burn Notice</p>
-		<img src="media/burnnoticepic.jpg" alt="Burn Notice Photo">
-		<p>Favorite Artist: Pitbull</p>
-		<audio controls>
-			<source src="media/fireball.mp3" type="audio/mpeg">
-			Your browser does not support the audio element.
-		</audio>
+		<div class="row">
+			<div class="column">
+				<h1>Natalie Freund</h1>
+				<img src="media/propic.jpg" alt="Headshot">
+			</div>
+			<div class="column">
+				<h2>About Me</h2>
+				<p>Age: 20</p>
+				<p>Home City: Palatine, IL 60067</p>
+				<p>Major: Cybersecurity</p>
+			</div>
+			<div class="column">
+				<h2>My Interests</h2>
+				<p>Favorite Movie: Inception</p>
+				<img src="media/inceptionpic.jpg" alt="Inception Photo">
+				<p>Favorite TV Show: Burn Notice</p>
+				<img src="media/burnnoticepic.jpg" alt="Burn Notice Photo">
+				<p>Favorite Artist: Pitbull</p>
+				<audio controls>
+					<source src="media/fireball.mp3" type="audio/mpeg">
+					Your browser does not support the audio element.
+				</audio>
+			</div>
+		</div>
 	</body>
 </html>
