--- a/volleyball.html
+++ b/volleyball.html
@@ -23,7 +23,7 @@
 		<p>Hometown: Palatine, IL</p>
 		<p>Highschool: Fremd</p>
 		<p>Position: RS</p>
-		<h2>Bio (Hover over title to see information)</h2>
+		<h2>Bio (hover over title to see information)</h2>
 		<div class="dropdown1">
 			<span>2018</span>
 			<div class="dropdown1-content">
@@ -39,7 +39,7 @@
 		<div class="dropdown3">
 			<span>Prep Accomplishments</span>
 			<div class="dropdown3-content">
-				<p>Prep Accomplishments: All Conference, Daily Herald First Team All Area, MVP, Team Captain, Club Player of the Month, Sportsmanship Award, National Honors Society, Honor Roll, Science Club, Math Team</p>
+				<p>All Conference, Daily Herald First Team All Area, MVP, Team Captain, Club Player of the Month, Sportsmanship Award, National Honors Society, Honor Roll, Science Club, Math Team</p>
 			</div>
 		</div>
 		<h2>Stats 2019-2020</h2>
