--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<div class="row">
 			<div class="column">
 				<h1>Natalie Freund</h1>
-				<img src="media/propic.jpg" alt="Headshot">
+				<img class="img1" src="media/propic.jpg" alt="Headshot">
 			</div>
 			<div class="column">
 				<h2>About Me</h2>
@@ -30,9 +30,9 @@
 			<div class="column">
 				<h2>My Interests</h2>
 				<p>Favorite Movie: Inception</p>
-				<img src="media/inceptionpic.jpg" alt="Inception Photo">
+				<img class="img2" src="media/inceptionpic.jpg" alt="Inception Photo">
 				<p>Favorite TV Show: Burn Notice</p>
-				<img src="media/burnnoticepic.jpg" alt="Burn Notice Photo">
+				<img class="img3" src="media/burnnoticepic.jpg" alt="Burn Notice Photo">
 				<p>Favorite Artist: Pitbull</p>
 				<audio controls>
 					<source src="media/fireball.mp3" type="audio/mpeg">
